# bluffking

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PUBLISH-BLOCKERS.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  TRADEMARKS.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
audits/: cross-vendor-ai-audit.html
blog/: LICENSE-CONTENT.md  README.en.md  README.md  index.html  production-ai-coding-guide.html
deploy/: README.md
engine/: Cargo.toml  README.md
engine/benches/: equity_bench.rs
engine/data/: README.md  preflop_v2.json
engine/examples/: gen_preflop_ranges.rs
engine/src/: action.rs  card.rs  deck.rs  eval.rs  event.rs  game.rs  hand.rs  lib.rs  player.rs  rng.rs  round.rs
engine/src/solver/: advisor.rs  equity.rs  hand_strength.rs  mod.rs  preflop_cfr.rs  preflop_charts.rs  range_estimate.rs  spot.rs  templates_zh.rs  tool_math.rs
engine/src/solver/testdata/: adr082_replay_golden.json  adr082_spot_postflop_golden.json  adr082_spot_preflop_golden.json
engine/tests/: chip_conservation_fold_overage.rs  event_emission.rs  full_hand.rs  hu_postflop_action_order.rs  poker_pro_rubric_30.rs  preflop_chart_contract.rs  prop_invariants.rs  solver_determinism.rs  solver_equity_smoke.rs  solver_hand_strength.rs  solver_rules.rs  solver_verdict_mapping.rs  variable_seats.rs
engine/tests/fixtures/: poker_pro_rubric_30.expected.json
gto-solver/: Cargo.toml
gto-solver/examples/: bench_solve.rs
gto-solver/src/: lib.rs
mental-poker/: Cargo.toml
mental-poker/benches/: phase4_deal.rs
mental-poker/examples/: phase4_blind_demo.rs  phase4_choreography.rs
mental-poker/src/: card_id.rs  crypto.rs  events.rs  existing.rs  hash.rs  lib.rs  mental.rs  pf.rs  provider.rs  signing.rs  state.rs  transcript.rs  verifier.rs
mental-poker/src/crypto_real/: decrypt.rs  dkg.rs  ec.rs  ed25519_signer.rs  mod.rs  shuffle.rs
mental-poker/src/crypto_real/shuffle/: tests.rs
mental-poker/tests/: conformance_vectors.rs  integration.rs  mp_verify_exit_code.rs  pf_verify_conformance.rs  phase4_server_blind.rs
mental-poker/tests/vectors/: mp_conformance.json  mp_phase4_ec.json  mp_sound_reenc.json
mp-wasm/: .gitignore  Cargo.toml  README.md  browser_demo.html  build-web.sh  choreography_e2e.cjs  parity_check.cjs
mp-wasm/.cargo/: config.toml
mp-wasm/src/: lib.rs
mp-wasm/ws/: client.cjs  coordinator.cjs  transport.cjs
scripts/: prepublish-check.sh
server-integration/: README.md  gto_solve.rs  texas-h5-Cargo.toml
