[package]
name = "engine"
version.workspace = true
edition.workspace = true
# Explicit metadata (U17/U53, dual-AI OSS review): the workspace roots differ
# between the private repo and the public mirror, so declare license/repository
# per crate rather than inheriting, keeping both workspaces consistent.
license = "AGPL-3.0-only"
description = "BluffKing poker engine — pure No-Limit Texas Hold'em rules, hand evaluation, and a local solver."
repository = "https://github.com/CisaSettle/bluffking"
# Never published to a registry — internal workspace crate (cargo-deny treats
# it as private so it is exempt from the license allow-list).
publish = false

[lints]
workspace = true

[features]
# Exposes test-only helpers (e.g. GameHand::override_hole_cards_for_test)
# that must not appear in production builds.  Activated by server's
# dev-dependencies so integration tests in server/src/ can inject hole cards.
test-helpers = []

[dependencies]
rs_poker = { version = "4.1", default-features = false }
rand = "0.8"
rand_chacha = "0.3"
serde = { workspace = true }
# ADR-043 §3.2: solver loads preflop_v2.json from include_str! at first use.
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1"
proptest = "1.4"
criterion = "0.8"

# Perf baseline + regression bench for the equity / hand-eval hot path
# (coach solver 10k-trial MC and the live snapshot 600-iter MC both funnel
# through engine::solver::equity + engine::rank_hand). Run:
#   cargo bench -p engine --bench equity_bench
[[bench]]
name = "equity_bench"
harness = false
